anoise (0.0.21) trusty; urgency=low

  * Fixed #1442350 SleepTimer
  * Fixed #1443565 Autostart
  * Fixed #1444073 Sort noises
  * Added scalable logo
  * Updated languages

 -- costales <costales.marcos@gmail.com>  Fri, 10 Apr 2015 16:04:31 +0000
