@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.18.3 -->
+<!-- Generated with glade 3.16.1 -->
 <interface>
-  <requires lib="gtk+" version="3.10"/>
+  <requires lib="gtk+" version="3.4"/>
   <object class="GtkAdjustment" id="adjustment_timer">
     <property name="lower">1</property>
     <property name="upper">999</property>
@@ -12,7 +12,7 @@
   <object class="GtkWindow" id="preferences_win">
     <property name="can_focus">False</property>
     <property name="title" translatable="yes">Anoise Preferences</property>
-    <property name="modal">True</property>
+    <property name="resizable">False</property>
     <property name="window_position">center</property>
     <property name="destroy_with_parent">True</property>
     <property name="icon_name">anoise</property>
@@ -46,6 +46,7 @@
                     <child>
                       <object class="GtkCheckButton" id="cb_timesleep">
                         <property name="label" translatable="yes">Stop in</property>
+                        <property name="height_request">29</property>
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
                         <property name="receives_default">False</property>
@@ -62,12 +63,11 @@
                     </child>
                     <child>
                       <object class="GtkSpinButton" id="spin_timer">
+                        <property name="height_request">29</property>
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
                         <property name="width_chars">3</property>
-                        <property name="max_width_chars">3</property>
                         <property name="text" translatable="yes">60</property>
-                        <property name="input_purpose">digits</property>
                         <property name="adjustment">adjustment_timer</property>
                         <property name="snap_to_ticks">True</property>
                         <property name="numeric">True</property>
@@ -80,7 +80,7 @@
                       </packing>
                     </child>
                     <child>
-                      <object class="GtkLabel" id="label3">
+                      <object class="GtkLabel" id="lbl_minutes">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
                         <property name="margin_left">6</property>
@@ -143,7 +143,6 @@ sudo shutdown -P 60</property>
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="receives_default">False</property>
-                    <property name="margin_top">6</property>
                     <property name="margin_bottom">18</property>
                     <property name="xalign">0</property>
                     <property name="draw_indicator">True</property>
@@ -156,6 +155,7 @@ sudo shutdown -P 60</property>
               <object class="GtkLabel" id="label5">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
+                <property name="margin_bottom">8</property>
                 <property name="label" translatable="yes">Startup:</property>
               </object>
             </child>
@@ -209,7 +209,6 @@ sudo shutdown -P 60</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
                 <property name="use_stock">True</property>
-                <property name="always_show_image">True</property>
                 <signal name="clicked" handler="on_preferences_delete_event" swapped="no"/>
               </object>
               <packing>
